--- a/src/colabtest.ipynb
+++ b/src/colabtest.ipynb
@@ -6,7 +6,8 @@
       "name": "colabtest.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyN7uDuuwWwfREfx44NyvUBB",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyO6NHVrJdeTUuBatowf47aa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,13 +37,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Z3wn7oZWLUYb",
-        "outputId": "6ac12cf0-3855-49bb-c5bf-2ec406821bd3"
+        "outputId": "cce5a517-2f6f-4b22-9bb0-dafaddf6efb5"
       },
       "source": [
         "import torch\n",
         "torch.cuda.is_available()"
       ],
-      "execution_count": 1,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -54,7 +55,56 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 1
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "o5NMaCYhPYQl",
+        "outputId": "49aa2473-5c1a-4ea2-93a8-58249688f142"
+      },
+      "source": [
+        "!gdown --id \"1duQU7xqXRsOSPYeOR0zLiSA8g_LCFzoV\" --output Minori.jpg"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Downloading...\n",
+            "From: https://drive.google.com/uc?id=1duQU7xqXRsOSPYeOR0zLiSA8g_LCFzoV\n",
+            "To: /content/Minori.jpg\n",
+            "\r  0% 0.00/219k [00:00<?, ?B/s]\r100% 219k/219k [00:00<00:00, 79.3MB/s]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "LqizK5bXP9Qq",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "71cc5a29-e5bd-49ae-c4cc-b544821cffa7"
+      },
+      "source": [
+        "!ls"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Minori.jpg  sample_data\n"
+          ],
+          "name": "stdout"
         }
       ]
     }
