--- a/src/colabtest.ipynb
+++ b/src/colabtest.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyO6NHVrJdeTUuBatowf47aa",
+      "authorship_tag": "ABX9TyMkeKmmtf96Dt0BtvaN3Qr4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -103,6 +103,105 @@
           "output_type": "stream",
           "text": [
             "Minori.jpg  sample_data\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "khG-li9sVnJ8",
+        "outputId": "2375e44e-f890-4943-b016-a0a1b1869977"
+      },
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive', force_remount=True)"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Mounted at /content/drive\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "M-6bF75_XeJx",
+        "outputId": "b2d13346-45cf-4264-8cbe-bce34f0616fa"
+      },
+      "source": [
+        "%cd /content/drive/MyDrive\n",
+        "!mkdir ML2021\n",
+        "%cd ./ML2021"
+      ],
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/content/drive/MyDrive\n",
+            "/content/drive/MyDrive/ML2021\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qugRNgf1YVpS",
+        "outputId": "54e2f34a-3e14-4356-f06e-1d918ca4cead"
+      },
+      "source": [
+        "!pwd"
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/content/drive/My Drive/ML2021\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lZjk2gI4Yztd",
+        "outputId": "61773441-c6a9-459d-db34-5da0b1113872"
+      },
+      "source": [
+        "!gdown --id '1duQU7xqXRsOSPYeOR0zLiSA8g_LCFzoV' --output Minori.jpg"
+      ],
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Downloading...\n",
+            "From: https://drive.google.com/uc?id=1duQU7xqXRsOSPYeOR0zLiSA8g_LCFzoV\n",
+            "To: /content/drive/MyDrive/ML2021/Minori.jpg\n",
+            "\r  0% 0.00/219k [00:00<?, ?B/s]\r100% 219k/219k [00:00<00:00, 32.0MB/s]\n"
           ],
           "name": "stdout"
         }
