使用 Colaboratory 创建

--- a/src/2021/hw3/hw03.ipynb
+++ b/src/2021/hw3/hw03.ipynb
@@ -1306,7 +1306,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1330,7 +1330,7 @@
         "%cd /content/drive/MyDrive/Colab\\ Notebooks/hw3\n",
         "!ls"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1424,9 +1424,11 @@
         "from tqdm.auto import tqdm\n",
         "\n",
         "import torchvision.models as models\n",
-        "import matplotlib.pyplot as plt"
+        "import matplotlib.pyplot as plt\n",
+        "\n",
+        "model_path = 'models/model.ckpt'"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1475,7 +1477,7 @@
         "    transforms.ToTensor(),\n",
         "])"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1505,7 +1507,7 @@
         "valid_loader = DataLoader(valid_set, batch_size=batch_size, shuffle=True, num_workers=8, pin_memory=True)\n",
         "test_loader = DataLoader(test_set, batch_size=batch_size, shuffle=False)"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1538,7 +1540,7 @@
         "img = Image.fromarray(img_label[0][0].numpy() * 255)\n",
         "img.convert('L')"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1570,7 +1572,7 @@
         "# img_labels\n",
         "train_set.samples[0]"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1694,7 +1696,7 @@
         "      x = self.fc_layers(x)\n",
         "      return x"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1873,8 +1875,8 @@
         "    device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
         "\n",
         "    # Construct a data loader.\n",
-        "    unlabeled_set = DatasetFolder(\"food-11/training/unlabeled\", loader=lambda x: Image.open(x), extensions=\"jpg\", transform=train_tfm)\n",
-        "    data_loader = DataLoader(unlabeled_set, batch_size=batch_size, shuffle=False, num_workers=8, pin_memory=True)\n",
+        "    dataset = DatasetFolder(\"food-11/training/unlabeled\", loader=lambda x: Image.open(x), extensions=\"jpg\", transform=train_tfm)\n",
+        "    data_loader = DataLoader(dataset, batch_size=batch_size, shuffle=False, num_workers=8, pin_memory=True)\n",
         "\n",
         "    # Make sure the model is in eval mode.\n",
         "    model.eval()\n",
@@ -1882,7 +1884,7 @@
         "    softmax = nn.Softmax(dim=-1)\n",
         "\n",
         "    predictions = []\n",
-        "    print('dataset len:', len(dataset))\n",
+        "    print('unlabeled dataset len:', len(dataset))\n",
         "\n",
         "    # Iterate over the dataset by batches.\n",
         "    for batch in tqdm(data_loader):\n",
@@ -1901,16 +1903,40 @@
         "    \n",
         "    predictions = torch.cat(predictions, 0)\n",
         "    values, targets = torch.max(predictions, dim=1)\n",
-        "    valid_indices = values > threshold\n",
-        "    valid_indices = [i for i, v in enumerate(valid_indices) if v]\n",
+        "    # 不区分class\n",
+        "    # valid_indices = values > threshold\n",
+        "    # valid_indices = [i for i, v in enumerate(valid_indices) if v]\n",
+        "    # dataset.samples = [(dataset.samples[i][0], targets[i].item()) for i in valid_indices]\n",
+        "    # 区分class\n",
+        "    values_sorted, values_indices = torch.sort(values, descending=True)\n",
+        "    targets_sorted = targets[values_indices]\n",
+        "    select_num = 100  # 每个class选择的最大数量\n",
+        "    select_indices = []\n",
+        "    each_class_num = {}  # 每个class已选择的数量\n",
+        "    for k in range(11):  # 11个class\n",
+        "        valid_indices = (values_sorted > threshold) & (targets_sorted == k)\n",
+        "        valid_indices = [i for i, v in enumerate(valid_indices) if v]\n",
         "\n",
-        "    dataset.samples = [(dataset.samples[i][0], targets[i]) for i in valid_indices]\n",
+        "        if len(valid_indices) >= select_num:\n",
+        "            valid_indices = valid_indices[:select_num]\n",
+        "        else:\n",
+        "            if len(valid_indices) > 0:\n",
+        "                valid_indices = valid_indices\n",
+        "            else:\n",
+        "                print(f'class {k:01d}, len(valid_indices) == 0')\n",
+        "                valid_indices = []\n",
+        "        \n",
+        "        select_indices += valid_indices\n",
+        "        each_class_num[k] = len(valid_indices)\n",
+        "    print('each_class_num', each_class_num)\n",
+        "    dataset.samples = [(dataset.samples[i][0], targets[i].item()) for i in select_indices]\n",
+        "    print('unlabeled dataset len2', len(dataset))\n",
         "\n",
         "    # Turn off the eval mode.\n",
         "    model.train()\n",
         "    return dataset"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1933,7 +1959,7 @@
         "# Initialize optimizer, you may fine-tune some hyperparameters such as learning rate on your own.\n",
         "optimizer = torch.optim.Adam(model.parameters(), lr=0.0003, weight_decay=1e-5)"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1982,7 +2008,7 @@
       },
       "source": [
         "# The number of training epochs.\n",
-        "n_epochs = 2\n",
+        "n_epochs = 80\n",
         "\n",
         "# Whether to do semi-supervised learning.\n",
         "do_semi = True\n",
@@ -1993,6 +2019,7 @@
         "valid_loss_list = []\n",
         "valid_accs_list = []\n",
         "\n",
+        "best_acc = 0.0\n",
         "for epoch in range(n_epochs):\n",
         "    # ------------ TODO --------------\n",
         "    # In each epoch, relabel the unlabeled dataset for semi-supervised learning.\n",
@@ -2097,9 +2124,15 @@
         "    valid_accs_list.append(valid_acc)\n",
         "\n",
         "    # Print the information.\n",
-        "    print(f\"[ Valid | {epoch + 1:03d}/{n_epochs:03d} ] loss = {valid_loss:.5f}, acc = {valid_acc:.5f}\")"
+        "    print(f\"[ Valid | {epoch + 1:03d}/{n_epochs:03d} ] loss = {valid_loss:.5f}, acc = {valid_acc:.5f}\")\n",
+        "\n",
+        "    if valid_acc > best_acc:\n",
+        "        # Save model if your model improved\n",
+        "        best_acc = valid_acc\n",
+        "        print(f'Saving model with acc {best_acc:.5f}')\n",
+        "        torch.save(model.state_dict(), model_path)"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2245,7 +2278,7 @@
         "plt.legend()\n",
         "plt.show()"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2281,7 +2314,7 @@
         "plt.legend()\n",
         "plt.show()"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2357,7 +2390,7 @@
         "    # Take the class with greatest logit as prediction and record it.\n",
         "    predictions.extend(logits.argmax(dim=-1).cpu().numpy().tolist())"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2397,7 +2430,7 @@
         "    for i, pred in enumerate(predictions):\n",
         "        f.write(f\"{i},{pred}\\n\")"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     }
   ]
